--- a/ecommerce/store/templates/store.html
+++ b/ecommerce/store/templates/store.html
@@ -1,9 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
 {% block body %}
 
 <h3> STORE</h3>
+
+{% for product in products %}
+
+    <img src="{{ product.image.url }}" , width="300" , height="400">
+    <p>{{ product.name }}</p>
+    <p>{{ product.price }}</p>
+
+{% endfor %}
 
 {% endblock %}
