--- a/ecommerce/store/templates/base.html
+++ b/ecommerce/store/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce TCM </title>
     <link rel="stylesheet" type="text/css" , href="{% static 'css/main.css' %}">
+    <script src="https://kit.fontawesome.com/3e0f5076df.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
