start building add item to cart and add the global variables in settings

--- a/ecommerce/store/templates/navbar.html
+++ b/ecommerce/store/templates/navbar.html
@@ -1,7 +1,12 @@
+{% load static %}
+
 <nav>
     <a href="{% url 'homepage' %}">TCM - E-commerce</a>
     <a href="{% url 'store' %}">Store</a>
     <a href="{% url 'login' %}">Login</a>
     <a href="{% url 'profile' %}">Profile</a>
-    <a href="{% url 'shopping_cart' %}">Shopping_Cart</a>
+    <a href="{% url 'cart' %}">Shopping_Cart</a>
+    <img src="{% static 'images/carrinho.png' %}" width="30px" height="30px"> 
+    {{ quant_cart_itens }}
+
 </nav>
