Add Address in checkout page. Add New_Address page.

--- a/ecommerce/store/templates/checkout.html
+++ b/ecommerce/store/templates/checkout.html
@@ -24,7 +24,7 @@
             {{ each_address.street }},{{ each_address.number }} - 
             {{ each_address.complement }} - 
             {{ each_address.city }}-{{ each_address.state }} - 
-            {{ each_address.cep }}
+            {{ each_address.cep }} - {{ each_address.country }}
         </label>
         <br>
     {% endfor %}
