--- a/ecommerce/store/templates/shopping_cart.html
+++ b/ecommerce/store/templates/shopping_cart.html
@@ -14,29 +14,29 @@
 
     {% for item in order_itens %}
         <p>
-            <img src="{{ item.stockitem_id.product_id.image.url }}" width="50" height="70">
-            Product: {{ item.stockitem_id.product_id.name }}; 
-            Color: {{ item.stockitem_id.color.name }}; 
-            Size: {{ item.stockitem_id.size }}; 
+            <img src="{{ item.stockitem.product.image.url }}" width="50" height="70">
+            Product: {{ item.stockitem.product.name }}; 
+            Color: {{ item.stockitem.color.name }}; 
+            Size: {{ item.stockitem.size }}; 
             
             <div style="display: flex;">
                 Quantity :
 
                 <!-- button to REMOVE one item -->
-                <form method="post" action="{% url 'remove_to_cart' item.stockitem_id.product_id.id %}">
+                <form method="post" action="{% url 'remove_to_cart' item.stockitem.product.id %}">
                     {% csrf_token %}
-                    <input type="hidden" name="size" value="{{ item.stockitem_id.size }}">                   
-                    <input type="hidden" name="color" value="{{ item.stockitem_id.color.id }}" >
+                    <input type="hidden" name="size" value="{{ item.stockitem.size }}">                   
+                    <input type="hidden" name="color" value="{{ item.stockitem.color.id }}" >
                     <button type="submit">-</button>
                 </form>
 
                 {{ item.quant }}
 
                 <!-- bottom to ADD one item-->
-                <form method="post" action="{% url 'add_to_cart' item.stockitem_id.product_id.id %}">
+                <form method="post" action="{% url 'add_to_cart' item.stockitem.product.id %}">
                     {% csrf_token %}
-                    <input type="hidden" name="size" value="{{ item.stockitem_id.size }}">                   
-                    <input type="hidden" name="color" value="{{ item.stockitem_id.color.id }}" >
+                    <input type="hidden" name="size" value="{{ item.stockitem.size }}">                   
+                    <input type="hidden" name="color" value="{{ item.stockitem.color.id }}" >
                     <button type="submit">+</button>
                 </form>
             </div>
