--- a/ecommerce/store/templates/store.html
+++ b/ecommerce/store/templates/store.html
@@ -9,8 +9,8 @@
     {% csrf_token %}
     
     <p>Price</p>
-        <input type="number" name="minimum_price" value="{{ minimum_price }}">
-        <input type="number" name="maximum_price" value="{{ maximum_price }}">
+        <input type="number" name="minimum_price" value="{{ minimum_price }}" step="0.1">
+        <input type="number" name="maximum_price" value="{{ maximum_price }}" step="0.1">
 
     <p>Size</p>
         {% for size in sizes %}
@@ -26,11 +26,12 @@
 
     <p>Type</p>
         {% for type in all_type %}
-            <input type="radio" name="category" value="{{ type.slug }}">
+            <input type="radio" name="type" value="{{ type.slug }}">
             <label for="{{ type.slug }}">{{ type.name }}</label> 
         {% endfor %}
 
-        <button type="submit">Apply Filters</button>
+    
+    <button type="submit">Apply Filters</button>
 
 </form>
 
