All filter Done! Including "Order By" - Most Popular

--- a/ecommerce/store/templates/base.html
+++ b/ecommerce/store/templates/base.html
@@ -16,6 +16,7 @@
 
     {% block body %}
     {% endblock %}
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
 </body>
 
