Start creating - Login and Create Account

--- a/ecommerce/store/templates/navbar.html
+++ b/ecommerce/store/templates/navbar.html
@@ -3,13 +3,7 @@
 <nav>
     <a href="{% url 'homepage' %}">TCM</a>
     <a href="{% url 'store' %}">Store</a>
-    <a href="{% url 'login' %}">Login</a>
-    <a href="{% url 'profile' %}">Profile</a>
-    <a href="{% url 'cart' %}">Cart</a>
-    <img src="{% static 'images/carrinho.png' %}" width="30px" height="30px"> 
-    {{ quant_cart_itens }}
-
-
+    
     <div style="display: flex;">
         {% for category in all_category %}
             <div>
@@ -21,5 +15,20 @@
             </div>
         {% endfor %}
     </div>
+
+    
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'profile' %}">Profile</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+
+
+    <a href="{% url 'cart' %}">Cart</a>
+    <img src="{% static 'images/carrinho.png' %}" width="30px" height="30px"> 
+    {{ quant_cart_itens }}
+
+
+    
 
 </nav>
