login_page and view created.

--- a/ecommerce/store/templates/user/create_account.html
+++ b/ecommerce/store/templates/user/create_account.html
@@ -16,6 +16,6 @@
 
 </form>
 
-<a href="{% url 'login' %}">Alredy have a Account? Login</a>
+<a href="{% url 'login_page' %}">Already have a Account? Login</a>
 
 {% endblock %}
