--- a/ecommerce/store/templates/navbar.html
+++ b/ecommerce/store/templates/navbar.html
@@ -16,11 +16,11 @@
         {% endfor %}
     </div>
 
-    
+
     {% if request.user.is_authenticated %}
         <a href="{% url 'profile' %}">Profile</a>
     {% else %}
-        <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'login_page' %}">Login</a>
     {% endif %}
 
 
