Add function to "Reset Password" - NOT with e-mail send.

--- a/ecommerce/store/templates/user/login.html
+++ b/ecommerce/store/templates/user/login.html
@@ -20,6 +20,6 @@
 </form>
 
 <a href="{% url 'create_account' %}">Create New Account</a>
-<a href="#">Forgot the password?</a>
+<a href="{% url 'password_reset' %}">Forgot the password?</a>
 
 {% endblock %}
